# sigil-lang

./: .editorconfig  .gitignore  BUILD_NUMBER  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  build-all  build-all.sh  clippy-all  clippy-all.sh  clippy.toml  fmt-all  fmt-all.sh  full-check.sh  install.sh  lefthook.yml  llvm-build  llvm-clippy  llvm-clippy.sh  llvm-test  llvm-test.sh  rebuild-playground  rebuild-playground.sh  rustfmt.toml  setup.sh  test-all  test-all.sh  test_cast  test_cast_real
compiler/ori_arc/: Cargo.toml
compiler/ori_arc/src/: borrow.rs  classify.rs  drop.rs  expand_reuse.rs  fbip.rs  graph.rs  ir.rs  lib.rs  liveness.rs  ownership.rs  rc_elim.rs  rc_insert.rs  reset_reuse.rs  test_helpers.rs  tests.rs
compiler/ori_arc/src/borrow/: mod.rs  tests.rs
compiler/ori_arc/src/classify/: mod.rs  tests.rs
compiler/ori_arc/src/decision_tree/: compile.rs  emit.rs  flatten.rs  mod.rs
compiler/ori_arc/src/drop/: mod.rs  (+1 more)
compiler/ori_canon/: Cargo.toml
compiler/ori_canon/src/: const_fold.rs  desugar.rs  exhaustiveness.rs  lib.rs  lower.rs  patterns.rs  validate.rs
compiler/ori_codegen/: Cargo.toml
compiler/ori_codegen/src/: context.rs  lib.rs
compiler/ori_compiler/: Cargo.toml
compiler/ori_compiler/src/: lib.rs  output.rs  pipeline.rs  setup.rs  tests.rs
compiler/ori_diagnostic/: Cargo.toml
compiler/ori_diagnostic/src/: diagnostic.rs  error_code.rs  guarantee.rs  lib.rs  queue.rs  span_utils.rs
compiler/ori_eval/: Cargo.toml
compiler/ori_eval/src/: derives.rs  diagnostics.rs  environment.rs  errors.rs  eval_mode.rs  function_val.rs  lib.rs  method_key.rs  methods.rs  module_registration.rs  operators.rs  print_handler.rs  shared.rs  stack.rs  unary_operators.rs  user_methods.rs
compiler/ori_fmt/: Cargo.toml  README.md
compiler/ori_fmt/src/: comments.rs  context.rs  declarations.rs  emitter.rs  incremental.rs  lib.rs  tests.rs
compiler/ori_fmt/tests/: golden_tests.rs  idempotence_tests.rs  incremental_tests.rs  property_tests.proptest-regressions  property_tests.rs  width_tests.rs
compiler/ori_ir/: Cargo.toml
compiler/ori_ir/src/: arena.rs  builtin_constants.rs  builtin_methods.rs  builtin_type.rs  comment.rs  derives.rs  expr_id.rs  format_spec.rs  incremental.rs  inline_list.rs  interner.rs  lib.rs  metadata.rs  name.rs  parsed_type.rs  pattern_resolution.rs  span.rs  token.rs  traits.rs  type_id.rs  visitor.rs
compiler/ori_lexer/: Cargo.toml
compiler/ori_lexer/src/: comments.rs  convert.rs  cook_escape.rs  cooker.rs  escape.rs  foreign_keywords.rs  keywords.rs  lex_error.rs  lib.rs  parse_helpers.rs  raw_token.rs  tests.rs  token_flags.rs  unicode_confusables.rs  what_is_next.rs
compiler/ori_lexer_core/: Cargo.toml
compiler/ori_lexer_core/proptest-regressions/: cursor.txt
compiler/ori_lexer_core/src/: cursor.rs  lib.rs  raw_scanner.rs  source_buffer.rs  tag.rs
compiler/ori_llvm/: Cargo.toml  REORGANIZATION.md
compiler/ori_llvm/examples/: benchmark.rs  fib_benchmark.rs
compiler/ori_llvm/src/: builder.rs  collections.rs  compile_ctx.rs  context.rs  control_flow.rs  declare.rs  evaluator.rs  functions.rs  lib.rs  matching.rs  module.rs  operators.rs  runtime.rs  traits.rs  types.rs
compiler/ori_macros/: Cargo.toml
compiler/ori_macros/src/: diagnostic.rs  lib.rs  subdiagnostic.rs  utils.rs
compiler/ori_macros/tests/: ui.rs
compiler/ori_parse/: Cargo.toml
compiler/ori_parse/src/: compositional_tests.rs  context.rs  cursor.rs  error.rs  foreign_keywords.rs  incremental.rs  lib.rs  outcome.rs  progress.rs  recovery.rs  scratch.rs  series.rs  snapshot.rs  stack.rs
compiler/ori_patterns/: Cargo.toml
compiler/ori_patterns/src/: cache.rs  channel.rs  errors.rs  fusion.rs  lib.rs  method_key.rs  parallel.rs  parallel_tests.rs  recurse.rs  registry.rs  signature.rs  spawn.rs  test_helpers.rs  timeout.rs  user_methods.rs  with_pattern.rs
compiler/ori_rt/: Cargo.toml
compiler/ori_rt/src/: format.rs  iterator.rs  lib.rs  tests.rs
compiler/ori_stack/: Cargo.toml
compiler/ori_stack/src/: lib.rs  tests.rs
compiler/ori_typeck/: Cargo.toml
compiler/ori_typeck/src/: lib.rs  operators.rs  shared.rs  stack.rs  suggest.rs
compiler/ori_types/: Cargo.toml
compiler/ori_types/src/: context.rs  core.rs  data.rs  env.rs  error.rs  flags.rs  idx.rs  item.rs  lib.rs  lifetime.rs  tag.rs  traverse.rs  type_interner.rs  value_category.rs
compiler/oric/: Cargo.toml
compiler/oric/benches/: formatter.rs  lexer.rs  lexer_core.rs  memory.rs  parser.rs  type_check.rs
compiler/oric/examples/: profile_lexer.rs
compiler/oric/src/: context.rs  db.rs  debug.rs  imports.rs  input.rs  ir.rs  lib.rs  main.rs  parser.rs  stack.rs  suggest.rs  tracing_setup.rs  typeck.rs  types.rs
compiler/oric/tests/: phases.rs  sync.rs
compiler/sigil-macros/: Cargo.toml
compiler/sigil-macros/src/: diagnostic.rs  lib.rs
compiler/sigil_codegen/: Cargo.toml
compiler/sigil_codegen/src/: context.rs  lib.rs
compiler/sigil_diagnostic/: Cargo.toml
compiler/sigil_diagnostic/src/: lib.rs  queue.rs  span_utils.rs
compiler/sigil_eval/: Cargo.toml
compiler/sigil_eval/src/: environment.rs  errors.rs  function_val.rs  lib.rs  method_key.rs  methods.rs  operators.rs  unary_operators.rs  user_methods.rs
compiler/sigil_ir/: Cargo.toml
compiler/sigil_ir/src/: arena.rs  derives.rs  expr_id.rs  interner.rs  lib.rs  name.rs  parsed_type.rs  span.rs  token.rs  type_id.rs  visitor.rs
compiler/sigil_lexer/: Cargo.toml
compiler/sigil_lexer/src/: lib.rs
compiler/sigil_llvm/: Cargo.toml
compiler/sigil_llvm/examples/: benchmark.rs  fib_benchmark.rs
compiler/sigil_llvm/src/: evaluator.rs  lib.rs  module.rs  runtime.rs
compiler/sigil_parse/: Cargo.toml
compiler/sigil_parse/src/: cursor.rs  lib.rs  recovery.rs
compiler/sigil_patterns/: Cargo.toml
compiler/sigil_patterns/src/: cache.rs  errors.rs  fusion.rs  lib.rs  parallel.rs  parallel_tests.rs  recurse.rs  registry.rs  signature.rs  spawn.rs  timeout.rs  with_pattern.rs
compiler/sigil_typeck/: Cargo.toml
compiler/sigil_typeck/src/: lib.rs  operators.rs
(+4230 files in other folders)
