[workspace]
resolver = "2"
members = [
    "compiler/sigil_ir",
    "compiler/sigil_diagnostic",
    "compiler/sigil_lexer",
    "compiler/sigil_types",
    "compiler/sigil_parse",
    "compiler/sigil_patterns",
    "compiler/sigil_typeck",
    "compiler/sigil_eval",
    "compiler/sigil-macros",
    "compiler/sigilc",
]
# LSP excluded until updated to use new compiler
exclude = [
    "tools/sigil-lsp",
]

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/upstat-io/sigil-lang"

[workspace.dependencies]
logos = "0.14"
ariadne = "0.4"
thiserror = "1.0"
rayon = "1.10"
pretty_assertions = "1.4"
salsa = "0.18"
dashmap = "6.1"
parking_lot = "0.12"
crossbeam = "0.8"
rustc-hash = "2.1"
stacker = "0.1"

# Internal crates
sigil_ir = { path = "compiler/sigil_ir" }
sigil_diagnostic = { path = "compiler/sigil_diagnostic" }
sigil_lexer = { path = "compiler/sigil_lexer" }
sigil_types = { path = "compiler/sigil_types" }
sigil_parse = { path = "compiler/sigil_parse" }
sigil_patterns = { path = "compiler/sigil_patterns" }
sigil_typeck = { path = "compiler/sigil_typeck" }
sigil_eval = { path = "compiler/sigil_eval" }
sigil-macros = { path = "compiler/sigil-macros" }

# Workspace-wide lint configuration
[workspace.lints.rust]
unsafe_code = "deny"
dead_code = "deny"
unused = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = 0 }
suspicious = { level = "deny", priority = 0 }

# Deny footguns
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"

# Allow for CLI/practical reasons
needless_return = "allow"
print_stdout = "allow"
print_stderr = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
too_many_lines = "allow"
cognitive_complexity = "allow"
similar_names = "allow"
