[workspace]
resolver = "2"
members = [
    "compiler/ori_ir",
    "compiler/ori_diagnostic",
    "compiler/ori_lexer",
    "compiler/ori_types",
    "compiler/ori_parse",
    "compiler/ori_patterns",
    "compiler/ori_typeck",
    "compiler/ori_eval",
    "compiler/ori_codegen",
    # "compiler/ori_llvm",  # Temporarily excluded - needs LLVM installed
    "compiler/ori-macros",
    "compiler/oric",
]
# LSP excluded until updated to use new compiler
# ori_llvm temporarily excluded - needs LLVM installed
exclude = [
    "tools/ori-lsp",
    "compiler/ori_llvm",
]

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/anthropics/ori-lang"

[workspace.dependencies]
logos = "0.14"
ariadne = "0.4"
thiserror = "1.0"
rayon = "1.10"
pretty_assertions = "1.4"
salsa = "0.18"
dashmap = "6.1"
parking_lot = "0.12"
crossbeam = "0.8"
rustc-hash = "2.1"
stacker = "0.1"

# Internal crates
ori_ir = { path = "compiler/ori_ir" }
ori_diagnostic = { path = "compiler/ori_diagnostic" }
ori_lexer = { path = "compiler/ori_lexer" }
ori_types = { path = "compiler/ori_types" }
ori_parse = { path = "compiler/ori_parse" }
ori_patterns = { path = "compiler/ori_patterns" }
ori_typeck = { path = "compiler/ori_typeck" }
ori_eval = { path = "compiler/ori_eval" }
ori_codegen = { path = "compiler/ori_codegen" }
ori_llvm = { path = "compiler/ori_llvm" }
ori-macros = { path = "compiler/ori-macros" }

# Workspace-wide lint configuration
[workspace.lints.rust]
unsafe_code = "deny"
dead_code = "deny"
unused = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# Deny footguns
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"

# Allow for CLI/practical reasons
needless_return = "allow"
print_stdout = "allow"
print_stderr = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
too_many_lines = "allow"
cognitive_complexity = "allow"
similar_names = "allow"
