[package]
name = "ori_compiler"
description = "Portable Ori compiler driver (no Salsa, no IO)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ori_ir.workspace = true
ori_diagnostic.workspace = true
ori_lexer.workspace = true
ori_parse.workspace = true
ori_types.workspace = true
ori_canon.workspace = true
ori_eval.workspace = true
ori_patterns.workspace = true
ori_fmt.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
