[package]
name = "ori_diagnostic"
description = "Diagnostic and error reporting for the Ori compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ori_ir.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
