[package]
name = "ori_eval"
description = "Interpreter/evaluator for the Ori compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ori_ir.workspace = true
ori_types.workspace = true
ori_diagnostic.workspace = true
ori_patterns.workspace = true
stacker.workspace = true
rustc-hash.workspace = true
rayon.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
