[package]
name = "ori_eval"
description = "Interpreter/evaluator for the Ori compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ori_ir.workspace = true
ori_patterns.workspace = true
ori_types.workspace = true
parking_lot.workspace = true
ori_stack.workspace = true
rustc-hash.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
ori_lexer.workspace = true
ori_parse.workspace = true

[lints]
workspace = true
