[package]
name = "ori_fmt"
description = "Code formatter for the Ori language"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal crates
ori_ir.workspace = true

# Hashing
rustc-hash.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
