[package]
name = "ori_ir"
description = "Intermediate representation types for the Ori compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# String interning
rustc-hash.workspace = true
parking_lot.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
