[package]
name = "ori_ir"
description = "Intermediate representation types for the Ori compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
cache = ["serde"]

[dependencies]
# String interning
rustc-hash.workspace = true
parking_lot.workspace = true

# Serialization (optional, for incremental compilation cache)
serde = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
