[package]
name = "ori_lexer"
description = "Lexer for the Ori compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ori_lexer_core.workspace = true
ori_ir.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
