[package]
name = "ori_lexer_core"
description = "Low-level tokenizer for Ori (standalone, zero ori_* dependencies)"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# No ori_* dependencies! This crate is standalone.
# External tools (LSP, formatter, highlighter) can depend on this
# without pulling in the compiler.
memchr = "2"

[dev-dependencies]
pretty_assertions.workspace = true
proptest.workspace = true

[lints]
workspace = true
