[package]
name = "ori_llvm"
version = "0.1.0-alpha.8"
edition = "2021"
description = "LLVM backend for the Ori compiler"
license = "MIT OR Apache-2.0"
repository = "https://github.com/upstat-io/ori-lang"

# This crate is EXCLUDED from the main workspace because it requires LLVM.
# Build only in container: ./docker/llvm/run.sh cargo build -p ori_llvm

[dependencies]
# Ori crates (relative paths since excluded from workspace)
ori_ir = { path = "../ori_ir" }

# Debug instrumentation
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Concurrency primitives
parking_lot = "0.12"

# LLVM bindings - platform-specific linking
# Linux/macOS: dynamic linking (requires LLVM installed or in Docker)
# Windows: static linking (requires pre-built LLVM package)
[target.'cfg(not(windows))'.dependencies]
inkwell = { version = "0.8", features = ["llvm17-0-force-dynamic"] }
# llvm-sys for new pass manager C API (LLVMRunPasses, etc.)
llvm-sys = { version = "170", features = ["force-dynamic"] }

[target.'cfg(windows)'.dependencies]
inkwell = { version = "0.8", features = ["llvm17-0"] }
llvm-sys = "170"

[dev-dependencies]
pretty_assertions = "1.4"

[lints.rust]
# unsafe_code is required for llvm-sys FFI calls
unsafe_code = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow for LLVM FFI work
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
