[package]
name = "ori_llvm"
version = "0.1.0-alpha.9"
edition = "2021"
description = "LLVM backend for the Ori compiler"
license = "MIT OR Apache-2.0"
repository = "https://github.com/upstat-io/ori-lang"

# Excluded from workspace (requires LLVM 17). LLVM tests run in Docker.
# Build: cargo bl (debug) / cargo blr (release) / ./docker/llvm/run.sh

[dependencies]
# Ori crates (relative paths since excluded from workspace)
ori_arc = { path = "../ori_arc", features = ["cache"] }
ori_ir = { path = "../ori_ir", features = ["cache"] }
ori_rt = { path = "../ori_rt" }
ori_types = { path = "../ori_types", features = ["cache"] }

# Fast hash map for compiler internals
rustc-hash = "2.1"

# Serialization for incremental compilation cache
serde = { version = "1", features = ["derive"] }
bincode = "1"

# Persistent (immutable) data structures for O(1)-clone scope nesting
im = "15"

# Debug instrumentation
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# LLVM bindings - platform-specific linking
# Linux/macOS: dynamic linking (requires LLVM installed or in Docker)
# Windows: static linking (requires pre-built LLVM package)
[target.'cfg(not(windows))'.dependencies]
inkwell = { version = "0.8", features = ["llvm17-0-force-dynamic"] }
# llvm-sys for new pass manager C API (LLVMRunPasses, etc.)
llvm-sys = { version = "170", features = ["force-dynamic"] }

[target.'cfg(windows)'.dependencies]
inkwell = { version = "0.8", features = ["llvm17-0"] }
llvm-sys = "170"

[dev-dependencies]
pretty_assertions = "1.4"
wasmparser = "0.221"
tempfile = "3.10"
object = "0.36"

[lints.rust]
# unsafe_code is required for llvm-sys FFI calls
unsafe_code = "allow"
dead_code = "deny"
unused = { level = "deny", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
allow_attributes_without_reason = "warn"

# Deny footguns
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
# unwrap/expect allowed: inkwell builder API returns Result for every LLVM instruction;
# these only fail on internal LLVM state corruption, not user input
unwrap_used = "allow"
expect_used = "allow"

# Allow for CLI/practical reasons
needless_return = "deny"
print_stdout = "allow"
print_stderr = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
too_many_lines = "deny"
cognitive_complexity = "deny"
similar_names = "allow"
