[package]
name = "ori_macros"
version = "0.1.0-alpha.2"
edition = "2021"
description = "Procedural macros for the Ori compiler"
license = "MIT OR Apache-2.0"
repository = "https://github.com/upstat-io/ori-lang"
keywords = ["compiler", "macros", "ori", "diagnostic"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[dev-dependencies]
# Testing proc-macros
trybuild = "1.0"

[lints]
workspace = true
