[package]
name = "ori_parse"
description = "Parser for the Ori compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ori_ir.workspace = true
ori_diagnostic.workspace = true
ori_stack.workspace = true
tracing.workspace = true

[dev-dependencies]
ori_lexer.workspace = true
pretty_assertions.workspace = true

[lints]
workspace = true
