[package]
name = "ori_patterns"
description = "Pattern system for the Ori compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ori_ir.workspace = true
ori_types.workspace = true
# Fast hash map for compiler internals
rustc-hash.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
