[package]
name = "ori_rt"
version = "0.1.0-alpha.8"
edition = "2021"
description = "Ori runtime library for AOT-compiled programs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/upstat-io/ori-lang"

# Excluded from workspace (built alongside ori_llvm for AOT).
# Build: cargo bl (debug) / cargo blr (release) / ./docker/llvm/run.sh

# Build both rlib (for Rust consumers like ori_llvm) and staticlib (for AOT linking)
[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
# No dependencies - pure runtime functions

[lints.rust]
# unsafe_code is required for C FFI entry points
unsafe_code = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# FFI functions take raw pointers from LLVM-generated code
not_unsafe_ptr_arg_deref = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
