[package]
name = "ori_typeck"
description = "Type checker for the Ori compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ori_ir.workspace = true
ori_types.workspace = true
ori_diagnostic.workspace = true
ori_parse.workspace = true
ori_patterns.workspace = true
ori_stack.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
ori_lexer.workspace = true

[lints]
workspace = true
