[package]
name = "ori_types"
description = "Type system for the Ori compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ori_ir.workspace = true
ori_diagnostic.workspace = true
ori_stack.workspace = true
parking_lot.workspace = true
rustc-hash.workspace = true
bitflags.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
ori_lexer.workspace = true
ori_parse.workspace = true

[lints]
workspace = true
