[package]
name = "oric"
version = "0.1.0-alpha.1"
edition = "2021"
description = "The Ori compiler - Salsa-first incremental compilation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/anthropics/ori-lang"
keywords = ["compiler", "programming-language", "ori", "incremental", "salsa"]
categories = ["compilers", "development-tools"]

[lib]
name = "oric"
path = "src/lib.rs"

[[bin]]
name = "ori"
path = "src/main.rs"

[features]
default = []
llvm = ["dep:ori_llvm"]  # Requires LLVM installed - build in container only

[dependencies]
# Incremental compilation - THE FOUNDATION
salsa.workspace = true

# Ori crates
ori_ir.workspace = true
ori_diagnostic.workspace = true
ori_lexer.workspace = true
ori_types.workspace = true
ori_parse.workspace = true
ori_patterns.workspace = true
ori_eval.workspace = true
ori_typeck.workspace = true
ori_fmt.workspace = true

# Optional LLVM backend (requires LLVM installed)
# Path dependency since ori_llvm is excluded from workspace
ori_llvm = { path = "../ori_llvm", optional = true }

# Lexing
logos.workspace = true

# Concurrency and hashing
parking_lot.workspace = true
rustc-hash.workspace = true

# Parallel test execution
rayon.workspace = true

# Stack safety for deep recursion
stacker = "0.1"

# Diagnostic derive macros
ori_macros = { path = "../ori_macros" }

[dev-dependencies]
pretty_assertions = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.10"

[[bench]]
name = "type_check"
harness = false

[[bench]]
name = "lexer"
harness = false

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "formatter"
harness = false

[lints]
workspace = true
