[package]
name = "sigil-macros"
version = "0.1.0-alpha.1"
edition = "2021"
description = "Procedural macros for the Sigil compiler"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sigil-lang/sigil"
keywords = ["compiler", "macros", "sigil", "diagnostic"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[dev-dependencies]
# Testing proc-macros
trybuild = "1.0"

[lints]
workspace = true
