[package]
name = "sigil_codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Code generation backend for the Sigil compiler"

[dependencies]
# Sigil crates
sigil_ir.workspace = true
sigil_types.workspace = true

# Hashing for efficient lookups
rustc-hash.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
