[package]
name = "sigil_eval"
description = "Interpreter/evaluator for the Sigil compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sigil_ir.workspace = true
sigil_types.workspace = true
sigil_diagnostic.workspace = true
sigil_parse.workspace = true
sigil_patterns.workspace = true
stacker.workspace = true
rustc-hash.workspace = true
rayon.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
