[package]
name = "sigil_lexer"
description = "Lexer for the Sigil compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sigil_ir.workspace = true
logos.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
