[package]
name = "sigil_llvm"
version.workspace = true
edition.workspace = true
description = "LLVM backend for the Sigil compiler"

[dependencies]
# LLVM bindings
inkwell = { version = "0.8", features = ["llvm17-0-force-dynamic"] }

# Sigil crates
sigil_ir.workspace = true
sigil_types.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
