[package]
name = "sigil_parse"
description = "Parser for the Sigil compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sigil_ir.workspace = true
sigil_diagnostic.workspace = true
stacker.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
sigil_lexer.workspace = true

[lints]
workspace = true
