[package]
name = "sigil_patterns"
description = "Pattern system for the Sigil compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sigil_ir.workspace = true
sigil_types.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
