[package]
name = "sigil_typeck"
description = "Type checker for the Sigil compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sigil_ir.workspace = true
sigil_types.workspace = true
sigil_diagnostic.workspace = true
sigil_parse.workspace = true
sigil_patterns.workspace = true
sigil_eval.workspace = true
stacker.workspace = true
rustc-hash.workspace = true
sigil_lexer.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
